# kz-academy

./: .env.example  .gitignore  .pymarkdown.json  Dockerfile  LICENSE  Makefile  README.md  SKILL.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  structure.yml
connectors/: _template.md  instagram-looter2.md  telegram-channel.md  threads-api4.md  tiktok-api23.md  yt-api.md
connectors/_responses/: README.md  instagram-looter2.md  telegram-channel.md  threads-api4.md  tiktok-api23.md  yt-api.md
docs/: full-stack-setup.md  getting-started.md  installation-chatgpt.md  installation-claude-ai.md  installation-claude-code.md  installation-cursor.md  installation-generic-llm.md  installation-mcp.md  installation-via-api.md
docs/methodology/: README.md  author-monitoring.md  cost-modeling.md  llm-models.md  pipeline-overview.md  transcription-rewriting.md  viral-detection.md
examples/: common.py
examples/instagram_looter2/: hashtag_feed.py  user_profile.py
examples/telegram_channel/: channel_info.py  latest_messages.py
examples/threads_api4/: search_threads.py  user_posts.py
examples/tiktok_api23/: trending.py  user_videos.py
examples/yt_api/: search.py  trending.py  video_info.py
scripts/: bundle.py  check_env.py  mcp_server.py  new_connector.py
tests/: test_structure.py
